@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 The OpenZipkin Authors
+ * Copyright 2015-2024 The OpenZipkin Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -34,6 +34,7 @@ import javax.jms.QueueSession;
 import org.apache.activemq.ActiveMQConnectionFactory;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.TestInstance;
@@ -58,6 +59,7 @@ import static zipkin2.codec.SpanBytesEncoder.THRIFT;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @Timeout(60)
+@Tag("docker")
 class ITActiveMQCollector {
   @RegisterExtension ActiveMQExtension activemq = new ActiveMQExtension();
   List<Span> spans = Arrays.asList(LOTS_OF_SPANS[0], LOTS_OF_SPANS[1]);
@@ -117,7 +119,7 @@ class ITActiveMQCollector {
    */
   @Test void toStringContainsOnlySummaryInformation() {
     assertThat(collector).hasToString(
-      String.format("ActiveMQCollector{brokerURL=%s, queue=%s}", activemq.brokerURL(), testName));
+      "ActiveMQCollector{brokerURL=%s, queue=%s}".formatted(activemq.brokerURL(), testName));
   }
 
   /** Ensures list encoding works: a json encoded list of spans */
